--- a/templates/index.html
+++ b/templates/index.html
@@ -7,5 +7,17 @@
     <div class="container">
         <h1>Flight Application Homepage!</h1>
         <p>Great session or not?</p>
+        <a href="http://127.0.0.1:5000/view-flights">View Flights</a>
+    </div>
+    <div class="container">
+      <h1>Start booking a flight!</h1>
+      <a href="http://127.0.0.1:5000/customer-registration">Register here</a>
+      <a href="http://127.0.0.1:5000/customer-login">Log in</a>
+    </div>
+    <div class="container">
+      <h1>Airline Staff</h1>
+        <a href="http://127.0.0.1:5000/staff-registration">Register here</a>
+        <a href="http://127.0.0.1:5000/staff-login">Log in</a>
+      </h1>
     </div>
 {% endblock %}
