--- a/templates/Customer-Login.html
+++ b/templates/Customer-Login.html
@@ -5,20 +5,25 @@
 {% block title %}Customer Login{% endblock %}
 {% block body %}
     <div class="container">
-        <h1>Customer Login</h1>
-        <form action="/customer-login-auth" method="POST" redirect>
-            <div class="container">
-                <label for="cust-username-login">Username</label>
-                <input id="cust-username-login" type="email" placeholder="joe@nyu.edu" name="customer-username" required>
-            </div>
-            <div class="container">
-                <label for="cust-password-login">Password</label>
-                <input id="cust-passsword-login" type="password" placeholder="abc123" name="customer-password" required>
-            </div>
-            <button type="submit" class="btn btn-secondary">Submit</button>
-            {% if error %}
-            <p class="error"><strong>Error:</strong> {{error}}</p>
-        {% endif %}
-        </form>
+        <h3>Customer Login</h3>
+        <hr>
+        <div class="col-md-4 col-md-offset-4">
+            <form action="/customer-login-auth" method="POST" redirect>
+                <div class="form-group">
+                    <label for="cust-username-login">Username</label>
+                    <input class="form-control" id="cust-username-login" type="email" placeholder="joe@nyu.edu" name="customer-username" required>
+                </div>
+                <div class="form-group">
+                    <label for="cust-password-login">Password</label>
+                    <input class="form-control" id="cust-passsword-login" type="password" placeholder="abc123" name="customer-password" required>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Submit</button>
+                {% if error %}
+                <p class="error"><strong>Error:</strong> {{error}}</p>
+            {% endif %}
+            </form>
+            <hr>
+            <h4 class="text-center"><a href="http://127.0.0.1:5000">Return Home</a></h4>
+        </div>
     </div>
 {% endblock %}
