--- a/templates/customer-registration.html
+++ b/templates/customer-registration.html
@@ -15,7 +15,7 @@
             <form action="/customer-registration-auth" method="POST" redirect="true">
                 <div class="form-group">
                     <label for="cust-name-input">Full name</label>
-                    <input class="form-control" id="cust-name-input" type="text" placeholder="Joe Biden" name="name" required aria-invalid>
+                    <input class="form-control" id="cust-name-input" type="text" placeholder="Joe Biden" name="name" required>
                 </div>
                 <div class="form-group">
                     <label for="cust-phone-input">Phone</label>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-secondary">Submit</button>
-                    <h4><a href="http://127.0.0.1:5000">Return home</a></h4>
+                    <h4><a href="http://127.0.0.1:5000">Return Home</a></h4>
                 </div>
             </form>
         </div>
