--- a/templates/customer-round-results.html
+++ b/templates/customer-round-results.html
@@ -50,16 +50,26 @@
                 <form action="/customer-oneway-purchase" method="POST" redirect>
                     <div class="row">
                         <div class="form-group col-md-4">
-                            <label for="flight-num1">Flight Number</label>
-                            <input class="form-control" id="flight-num1" type="text" placeholder="1234" name="flight-number" required>
+                            <label for="flight-num2">Flight Number</label>
+                            <input class="form-control" id="flight-num2" type="text" placeholder="1234" name="flight-number" required>
                         </div>
                         <div class="form-group col-md-4">
-                            <label for="dep-date2">Arrival City</label>
-                            <input class="form-control" id="dep-date2" type="date" placeholder="MM/DD/YYYY" name="departure-date" required>
+                            <label for="dep-date3">Departure Date</label>
+                            <input class="form-control" id="arr-city3" type="text" placeholder="Shanghai" name="departure-date" required>
                         </div>
                         <div class="form-group col-md-4">
-                            <label for="dep-time2">Arrival Airport</label>
-                            <input class="form-control" id="dep-time2" type="time" placeholder="Time" name="departure-time" required>
+                            <label for="dep-date3">Departure Time</label>
+                            <input class="form-control" id="arr-air3" type="text" placeholder="PVG" name="departure-time" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-md-">
+                            <label for="arr-date3">Arrival Date</label>
+                            <input class="form-control" id="arr-time3" type="date" placeholder="Shanghai" name="arrival-date" required>
+                        </div>
+                        <div class="form-group col-md-4">
+                            <label for="arr-time3">Arrival Time</label>
+                            <input class="form-control" id="arr-time3" type="time" placeholder="PVG" name="arrival-time" required>
                         </div>
                     </div>
                     <hr>
