--- a/templates/staff-registration.html
+++ b/templates/staff-registration.html
@@ -5,6 +5,43 @@
 {% block title %}Staff Registration{% endblock %}
 {% block body %}
     <div class="container">
-   
+        <h3>Staff Registration</h3>
+        <div class="col-md-6 col-md-offset-3">
+            {% if error %}
+            <div class="alert alert-danger">{{error}}</div>
+            {% elif success %}
+            <div class="alert alert-success">{{success}}</div>
+            {% endif %}
+            <form action="/staff-registration-auth" method="POST" redirect="true">
+                <div class="form-group">
+                    <label for="staff-first-name">First name</label>
+                    <input class="form-control" id="staff-first-name" type="text" placeholder="Joe" name="first-name" required>
+                </div>
+                <div class="form-group">
+                    <label for="staff-last-name">Last name</label>
+                    <input class="form-control" id="staff-last-name" type="text" placeholder="Biden" name="last-name" required>
+                </div>
+                <div class="form-group">
+                    <label for="staff-username-input">Username</label>
+                    <input class="form-control" id="staff-username-input" type="text" placeholder="Joe123" name="username" required>
+                </div>
+                <div class="form-group">
+                    <label for="cust-passcount-input">Airline</label>
+                    <input class="form-control" id="cust-passcount-input" type="text" placeholder="China Eastern" name="airline" required>
+                </div>
+                <div class="form-group">
+                    <label for="cust-dob-input">Date of Birth</label>
+                    <input class="form-control" id="cust-dob-input" type="date" placeholder="MM/DD/YYYY" name="date-of-birth" required>
+                </div>
+                <div class="form-group">
+                    <label for="staff-password-input">Password</label>
+                    <input class="form-control" id="staff-password-input" type="password" placeholder="abc123" name="password" required>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-secondary">Submit</button>
+                    <h4><a href="http://127.0.0.1:5000">Return home</a></h4>
+                </div>
+            </form>
+        </div>
     </div>
 {% endblock %}
