added staff functions

--- a/templates/customer-home.html
+++ b/templates/customer-home.html
@@ -15,7 +15,7 @@
         <h2><a href="http://127.0.0.1:5000/customer-flight-search">Flight Search 🔎</a></h2>
         <h1>What would you like to do today?</h1>
         <h3><a href="http://127.0.0.1:5000/customer-flight-view">My Flights</a></h3>
-        <h3><a href="http://127.0.0.1:5000/rate-flights">Rate/Comment</a></h3>
-        <h3><a href="http://127.0.0.1:5000/track-spending">Track Spending</a></h3>
+        <h3><a href="http://127.0.0.1:5000/customer-rate-flight">Rate/Comment</a></h3>
+        <h3><a href="http://127.0.0.1:5000/customer-track-spending">Track Spending</a></h3>
     </div>
 {% endblock %}
