--- a/templates/customer-oneway-results.html
+++ b/templates/customer-oneway-results.html
@@ -47,24 +47,24 @@
                 </table>
             </div>
             <div class="col-md-4">
-                <form action="/customer-oneway-purchase" method="POST" redirect>
+                <form action="/customer-purchase-ticket" method="POST" redirect>
                     <div class="row">
                         <div class="form-group col-md-4">
                             <label for="flight-num1">Flight Number</label>
                             <input class="form-control" id="flight-num1" type="text" placeholder="1234" name="flight-number" required>
                         </div>
                         <div class="form-group col-md-4">
-                            <label for="dep-date2">Arrival City</label>
+                            <label for="dep-date2">Departure Date</label>
                             <input class="form-control" id="dep-date2" type="date" placeholder="MM/DD/YYYY" name="departure-date" required>
                         </div>
                         <div class="form-group col-md-4">
-                            <label for="dep-time2">Arrival Airport</label>
+                            <label for="dep-time2">Departure Time</label>
                             <input class="form-control" id="dep-time2" type="time" placeholder="Time" name="departure-time" required>
                         </div>
                     </div>
-                    <hr>
                     <button type="submit" class="btn btn-primary btn-block">Select Flight</button>
                 </form>
+                <hr>
                 <h4 class="text-center"><a href="http://127.0.0.1:5000/customer-flight-search">Back to Flight Search</a></h4>
             </div>
         </div>
