--- a/templates/staff-home.html
+++ b/templates/staff-home.html
@@ -12,10 +12,18 @@
             </div>
         </div>
         <hr>
-        <h2><a href="http://127.0.0.1:5000/staff-flight-view">Flight Search 🔎</a></h2>
-        <h1>What would you like to do today?</h1>
+        <h4>View</h4>
+        <br>
+        <h3><a href="http://127.0.0.1:5000/staff-flight-view">Flights 🔎</a></h3>
+        <h3><a href="http://127.0.0.1:5000/staff-ratings-view">Ratings</a></h3>
+        <h3><a href="http://127.0.0.1:5000/staff-revenue-view">Revenue</a></h3>
+        <h3><a href="http://127.0.0.1:5000/staff-frequent-customers">Frequent Customers</a></h3>
+        <h3><a href="http://127.0.0.1:5000/staff-top-destinations">Top Destinations</a></h3>
+        <h4>Staff Permissions</h4>
         <h3><a href="http://127.0.0.1:5000/staff-create-flight">Create Flights</a></h3>
-        <h3><a href="http://127.0.0.1:5000/rate-flights">Change Flight Status</a></h3>
-        <h3><a href="http://127.0.0.1:5000/track-spending">Track Spending</a></h3>
+        <h3><a href="http://127.0.0.1:5000/change-status">Change Flight Status</a></h3>
+        <h3><a href="http://127.0.0.1:5000/add-airplane">Add Airplane</a></h3>
+        <h3><a href="http://127.0.0.1:5000/add-airport">Add Airport</a></h3>
+
     </div>
 {% endblock %}
